--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,10 @@
 ﻿version: 0.2
 
 phases:
+  install:
+    commands:
+      - apt-get update
+      - apt install jq
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
@@ -16,3 +20,9 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
+      - aws ecs describe-task-definition --task-definition $AWS_ECS_TASK_NAME | jq '.taskDefinition' > taskdef.json
+      - envsubst < appspec_template.yaml > appspec.yaml
+artifacts:
+  files:
+    - appspec.yaml
+    - taskdef.json      
