rollback appspec change

--- a/appspec_template.yaml
+++ b/appspec_template.yaml
@@ -6,6 +6,7 @@ Resources:
         TaskDefinition: "$TASK_DEFINITION"
         LoadBalancerInfo:
           ContainerName: "$CONTAINER_NAME"
+          ContainerPort: "80"
         PlatformVersion: "LATEST"
         NetworkConfiguration:
           AwsvpcConfiguration:
